// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Query should match snapshot when customQueryOutput  1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  customQueryOutput="{ items: [] }"
  customQueryStringHistory={
    Array [
      "q.v()",
    ]
  }
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`Custom Query should match snapshot when no customQueryOutput  1`] = `
<Connect
  actions={
    Object {
      "updateStoreValue": [Function],
    }
  }
  customQueryStringHistory={
    Array [
      "q.v()",
    ]
  }
  mapToProps={[Function]}
  updateStoreValue={[MockFunction]}
>
  <Component />
</Connect>
`;
